# snake-clone-clang

./: CMakeLists.txt  README.md  main.c  makefile  utils.c  utils.h
structs/: Event.h  Node.h  Options.h  Snake.h
